# learnopengl-repo

./: Cargo.toml
snippets/: Cargo.toml  index.html  notes.md
snippets/src/: app.rs  lib.rs  main.rs  shader.wgsl  shaders.rs  state.rs
